# grayscale_color

./: README.md
cpp_package/: CMakeLists.txt  package.xml
cpp_package/launch/: start.launch.py
cpp_package/src/: cpp_node.cpp
my_service_server/: CMakeLists.txt  package.xml
my_service_server/src/: my_service.cpp
python_package/: package.xml  setup.py
python_package/python_package/: python_node.py
